Release 1.1.6 - Bump LimboAPI, little refactor